#		0.0.5 Sat  6 Jul 2013 08:27:53 EST
#               Added Emulex HBA support
#		0.0.6 Sat  6 Jul 2013 23:46:59 EST
#               Added Qlogic HBA support
#               0.0.7 Sun  7 Jul 2013 09:51:40 EST
#               Added support to download Patches, README, and patchdiag.xref independently
#               0.0.8 Sun  7 Jul 2013 11:53:09 ES
#               Fixed Qlogic HBA firmware support
#               0.0.9 Sun  7 Jul 2013 12:33:40 EST
#               Added -R switch
#               0.1.0 Tue  9 Jul 2013 22:26:39 EST
#               Removed debug code
#               0.1.1 Thu 11 Jul 2013 13:10:19 EST
#               Added code to get Server Module / Chassis information
#               0.1.2 Thu 11 Jul 2013 13:39:52 EST
#               Added code to construct download URL from firmware information
#               0.1.3 Thu 11 Jul 2013 14:25:37 EST
#               Added test mode
#               0.1.4 Thu 11 Jul 2013 16:48:52 EST
#               Added archive code
#               0.1.5 Thu 11 Jul 2013 18:27:19 EST
#               Added handling to ignore non firmware URLs in output
#               0.1.6 Thu 11 Jul 2013 19:13:54 EST
#               Added handling for non existant model
#               0.1.7 Thu 11 Jul 2013 19:25:03 EST
#               Improved firmware download URL creation
#               0.1.8 Thu 11 Jul 2013 19:41:35 EST
#               Added support to create directories if the don't exist
#               0.1.9 Thu 11 Jul 2013 21:37:27 EST
#               Added functionality to list ZIP file contents and TFTP boot file
#               0.2.0 Thu 11 Jul 2013 22:04:11 EST
#               More handling for older firmware file naming inconsistencies
#               0.2.1 Fri 12 Jul 2013 00:48:26 EST
#               Bug fixes
#		0.2.2 Fri 12 Jul 2013 07:00:11 ES
#               Cleaned up zip file routine
#		0.2.3 Fri 12 Jul 2013 15:56:49 EST
#               Fixed bug with TFTP boot image code and updated README.md